# election-2026-candidate-analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.example  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
scripts/: add_publications.py  add_to_list.py
src/: exploratory_analysis.ipynb  main.py
src/data_outputs/: 2026-04-08T22-09-25_candidates_by_election.json  2026-04-08T22-16-03_candidates_by_election.json  candidates.json
src/raw_data/: dc-candidates-scotland-2026-04-02T16-17-27.csv  mayor.csv  scottish.csv  welsh.csv
tests/: test_main.py
